More progress on presentation.